--- a/rpg/index.html
+++ b/rpg/index.html
@@ -4,39 +4,97 @@
     <title>Bootstrap 101 Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+
+    <!-- My CSS -->
+    <link rel="stylesheet" href="rpg.css">
   </head>
   <body>
     <div class="container">
       <div class="row">
-          <p class="lead">List of Characters</p>
+        <p class="lead text-info">
+          List of Characters
+        </p>
+        <small>
+          Choose a character from the list below, then click the appropriate button.
+          <em>Have fun!!!</em>
+        </small>
       </div>
       <div class="row">
-        <div class="col-md-10">
-          <!--<img src="..." alt="..." class="img-rounded">
-          <img src="..." alt="..." class="img-rounded">
-          <img src="..." alt="..." class="img-rounded">
-          <img src="..." alt="..." class="img-rounded">
-          <img src="..." alt="..." class="img-rounded">-->
+        <div class="col-md-8">
+          <select multiple class="form-control">
+            <option>Conan</option>
+            <option>Buster</option>
+            <option>Nigel Thornberry</option>
+            <option>Eddard Stark</option>
+            <option>Satan</option>
+          </select>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
           <div class="row">
-            <button type="button" class="btn btn-success btn-block btn-lg">Create</button>
+            <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success btn-block">Create</a>
           </div>
           <div class="row">
-            <button type="button" class="btn btn-info btn-block btn-lg">Edit</button>
+            <a class="btn btn-info btn-lg btn-block" href="character.html">Edit</a>
           </div>
           <div class="row">
-            <button type="button" class="btn btn-danger btn-block btn-lg">Delete</button>
+            <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger btn-block">Delete</a>
           </div>
         </div>
       </div>
     </div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Are you sure that you want to delete this character?</h4>
+        </div>
+        <div class="modal-body">
+          Deleting a character is permanent and <strong>cannot be undone</strong>.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
+          <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete Character</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
+  <!-- Modal -->
+  <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Create Character</h4>
+        </div>
+        <div class="modal-body">
+          <p>Please select the desired information to create your character.</p>
+
+          <select class="form-control">
+            <option>Fighter</option>
+            <option>Wizard</option>
+            <option>Thief</option>
+            <option>Ranger</option>
+            <option>Demon</option>
+          </select>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button id="confirm-delete-button" type="button" class="btn btn-success">Create Character</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="//code.jquery.com/jquery.js"></script>
+
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script> 
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
+    <!-- Code specific to our RPG user interface. -->
+    <script src="rpg.js"></script>
   </body>
 </html>
