--- a/rpg/index.html
+++ b/rpg/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>RPG: CMSI370</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -10,83 +10,118 @@
     <link rel="stylesheet" href="rpg.css">
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <p class="lead text-info">
-          List of Characters
-        </p>
-        <small>
-          Choose a character from the list below, then click the appropriate button.
-          <em>Have fun!!!</em>
-        </small>
+
+    <div class = "wrapper">
+
+      <div class="container">
+        <div class="row">
+          <center>
+            <h2>Role Playing Game: CMSI 370</h2>
+          </center>
+        </div>
+        <div class="row">
+            <select multiple class="form-control">
+              <option>Conan</option>
+              <option>Buster</option>
+              <option>Nigel Thornberry</option>
+              <option>Eddard Stark</option>
+              <option>Satan</option>
+            </select>
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+
+      <!-- Deletion Modal -->
+      <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Are you sure that you want to delete this character?</h4>
+            </div>
+            <div class="modal-body">
+              Deleting a character is permanent and <strong>cannot be undone</strong>.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete</button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <!-- Edition Modal -->
+      <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Edit Character</h4>
+            </div>
+            <div class="modal-body">
+              <p>Edit select the desired information of yout character.</p>
+
+              <select class="form-control">
+                <option>Fighter</option>
+                <option>Wizard</option>
+                <option>Thief</option>
+                <option>Ranger</option>
+                <option>Demon</option>
+              </select>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button id="confirm-edit-button" type="button" class="btn btn-success">Save</button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+
+      <!-- Creation Modal -->
+      <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Create Character</h4>
+            </div>
+            <div class="modal-body">
+              <p>Please select the desired information to create your character.</p>
+
+              <select class="form-control">
+                <option>Fighter</option>
+                <option>Wizard</option>
+                <option>Thief</option>
+                <option>Ranger</option>
+                <option>Demon</option>
+              </select>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button id="confirm-delete-button" type="button" class="btn btn-success">Create Character</button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
+    </div><!-- /.wrapper -->
+  
+  <footer>
+    <div id="footerContainer">
+      <div id="footerLeft">
+          <h2>Role Playing Game</h2>
       </div>
-      <div class="row">
-        <div class="col-md-8">
-          <select multiple class="form-control">
-            <option>Conan</option>
-            <option>Buster</option>
-            <option>Nigel Thornberry</option>
-            <option>Eddard Stark</option>
-            <option>Satan</option>
-          </select>
-        </div>
-        <div class="col-md-4">
-          <div class="row">
-            <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success btn-block">Create</a>
-          </div>
-          <div class="row">
-            <a class="btn btn-info btn-lg btn-block" href="character.html">Edit</a>
-          </div>
-          <div class="row">
-            <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger btn-block">Delete</a>
-          </div>
-        </div>
+      <div id="footerCenter">
+        <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success footerModal">
+          <span class="glyphicon glyphicon-plus"></span>
+        </a>
+        <a id="edit-button" data-toggle="modal" href="#editModal" class="btn btn-lg btn-info footerModal">
+          <span class="glyphicon glyphicon-edit"></span>
+        </a>
+        <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger footerModal">
+          <span class="glyphicon glyphicon-trash"></span>
+        </a>
       </div>
-    </div>
-
-  <!-- Modal -->
-  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Are you sure that you want to delete this character?</h4>
-        </div>
-        <div class="modal-body">
-          Deleting a character is permanent and <strong>cannot be undone</strong>.
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Don't Delete</button>
-          <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete Character</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
-
-  <!-- Modal -->
-  <div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h4 class="modal-title">Create Character</h4>
-        </div>
-        <div class="modal-body">
-          <p>Please select the desired information to create your character.</p>
-
-          <select class="form-control">
-            <option>Fighter</option>
-            <option>Wizard</option>
-            <option>Thief</option>
-            <option>Ranger</option>
-            <option>Demon</option>
-          </select>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button id="confirm-delete-button" type="button" class="btn btn-success">Create Character</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+      <div id="footerRight">
+        <h2>CMSI 370</h2>
+      </div>
+    <div>
+  </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
