--- a/rpg/index.html
+++ b/rpg/index.html
@@ -13,35 +13,23 @@
 
     <div class = "wrapper">
 
-      <div class="container">
-        <div class="row">
-          <center>
-            <h2>Role Playing Game: CMSI 370</h2>
-          </center>
-        </div>
-        <div class="row">
-            <select multiple class="form-control">
-              <option>Conan</option>
-              <option>Buster</option>
-              <option>Nigel Thornberry</option>
-              <option>Eddard Stark</option>
-              <option>Satan</option>
-            </select>
-        </div><!-- /.row -->
-      </div><!-- /.container -->
+      <div class="middleText">
+        <p> You have no characters.
+          Create one by clicking the green button.</p>
+      </div>
 
       <!-- Deletion Modal -->
       <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">Are you sure that you want to delete this character?</h4>
+              <h4 class="modal-title">Delete Character</h4>
             </div>
             <div class="modal-body">
               Deleting a character is permanent and <strong>cannot be undone</strong>.
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button type="cancel-delete-button" class="btn btn-default" data-dismiss="modal">Cancel</button>
               <button id="confirm-delete-button" type="button" class="btn btn-danger">Delete</button>
             </div>
           </div><!-- /.modal-content -->
@@ -56,18 +44,11 @@
               <h4 class="modal-title">Edit Character</h4>
             </div>
             <div class="modal-body">
-              <p>Edit select the desired information of yout character.</p>
+              <p>Edit your character.</p>
 
-              <select class="form-control">
-                <option>Fighter</option>
-                <option>Wizard</option>
-                <option>Thief</option>
-                <option>Ranger</option>
-                <option>Demon</option>
-              </select>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button type="cancel-edit-button" class="btn btn-default" data-dismiss="modal">Cancel</button>
               <button id="confirm-edit-button" type="button" class="btn btn-success">Save</button>
             </div>
           </div><!-- /.modal-content -->
@@ -81,20 +62,81 @@
             <div class="modal-header">
               <h4 class="modal-title">Create Character</h4>
             </div>
-            <div class="modal-body">
-              <p>Please select the desired information to create your character.</p>
 
-              <select class="form-control">
-                <option>Fighter</option>
-                <option>Wizard</option>
-                <option>Thief</option>
-                <option>Ranger</option>
-                <option>Demon</option>
-              </select>
+            <div class="modal-body">
+              <center>
+                <p>Select your character's <strong>type</strong>.
+                <div class="btn-group btn-group-justified" data-toggle="buttons">
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option1"> Archer
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option2"> Knight
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Thief
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Ranger
+                  </label>
+                </div>
+
+                <br>
+                <p>Select your character's <strong>weapon</strong>.
+                <div class="btn-group btn-group-justified" data-toggle="buttons">
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option1"> Sword
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option2"> Bow and Arrow
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Warhammer
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Mace
+                  </label>
+                </div>
+
+                <br>
+                <p>Select your character's <strong>strongest</strong> attribute.
+                <div class="btn-group btn-group-justified" data-toggle="buttons">
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option1"> Strength
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option2"> Dexterity
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Intelligence
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Stamina
+                  </label>
+                </div>
+
+                <br>
+                <p>Select your character's <strong>weakest</strong> attribute.
+                <div class="btn-group btn-group-justified" data-toggle="buttons">
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option1"> Strength
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option2"> Dexterity
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Intelligence
+                  </label>
+                  <label class="btn btn-default">
+                    <input type="radio" name="options" id="option3"> Stamina
+                  </label>
+                </div>
+              </center>
             </div>
+
             <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-              <button id="confirm-delete-button" type="button" class="btn btn-success">Create Character</button>
+              <button type="cancel-create-button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button id="confirm-create-button" type="button" class="btn btn-success">Create Character</button>
             </div>
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
@@ -102,25 +144,19 @@
     </div><!-- /.wrapper -->
   
   <footer>
-    <div id="footerContainer">
-      <div id="footerLeft">
-          <h2>Role Playing Game</h2>
+      <div id="container">
+        <center>
+          <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success footerModal">
+            <span class="glyphicon glyphicon-plus"></span>
+          </a>
+          <a id="edit-button" data-toggle="modal" href="#editModal" class="btn btn-lg btn-info footerModal">
+            <span class="glyphicon glyphicon-edit"></span>
+          </a>
+          <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger footerModal">
+            <span class="glyphicon glyphicon-trash"></span>
+          </a>
+        </center>
       </div>
-      <div id="footerCenter">
-        <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success footerModal">
-          <span class="glyphicon glyphicon-plus"></span>
-        </a>
-        <a id="edit-button" data-toggle="modal" href="#editModal" class="btn btn-lg btn-info footerModal">
-          <span class="glyphicon glyphicon-edit"></span>
-        </a>
-        <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger footerModal">
-          <span class="glyphicon glyphicon-trash"></span>
-        </a>
-      </div>
-      <div id="footerRight">
-        <h2>CMSI 370</h2>
-      </div>
-    <div>
   </footer>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
