--- a/rpg/index.html
+++ b/rpg/index.html
@@ -14,8 +14,7 @@
     <div class = "wrapper">
 
       <div class="middleText">
-        <p> You have no characters.
-          Create one by clicking the green button.</p>
+        <h3> You have no characters. Create one by clicking the green button.</h3>
       </div>
 
       <!-- Deletion Modal -->
@@ -44,7 +43,6 @@
               <h4 class="modal-title">Edit Character</h4>
             </div>
             <div class="modal-body">
-              <p>Edit your character.</p>
 
             </div>
             <div class="modal-footer">
