--- a/rpg/index.html
+++ b/rpg/index.html
@@ -26,14 +26,27 @@
                 <tbody>
                   <tr>
                     <td>1</td>
-                    <td>Conan</td>
+                    <td><a href="#character-info" data-toggle="collapse">Conan</a></td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td><a href="#character-info" data-toggle="collapse">Gordon Freeman</a></td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td><a href="#character-info" data-toggle="collapse">Pikachu</a></td>
+                  </tr>
+                  <tr>
+                    <td>4</td>
+                    <td><a href="#character-info" data-toggle="collapse">50 Scent</a></td>
                   </tr>
                 </tbody>
               </table>
             </div><!-- /example -->
           </div>
-          <div class="col-md-6">
+          <div id="character-info" class="col-md-6 panel-collapse collapse">
             <p> here is where the character will show up.</p>
+            <img src="http://placehold.it/256x384"/>
           </div>
         </div>
       </div>
