--- a/rpg/index.html
+++ b/rpg/index.html
@@ -15,7 +15,7 @@
         <div class="row">
           <div class="col-md-6">
             <div class="table-container">
-              <table class="table table-hover" style="width:">
+              <table class="table table-hover" style="width:" id="character-list">
                 <thead>
                   <tr>
                     <th>#</th>
@@ -26,25 +26,26 @@
                 <tbody>
                   <tr>
                     <td>1</td>
-                    <td><a href="#character-info" data-toggle="collapse">Conan</a></td>
+                    <td>Conan</td>
                   </tr>
                   <tr>
                     <td>2</td>
-                    <td><a href="#character-info" data-toggle="collapse">Gordon Freeman</a></td>
+                    <td>Gordon Freeman</td>
                   </tr>
                   <tr>
                     <td>3</td>
-                    <td><a href="#character-info" data-toggle="collapse">Pikachu</a></td>
+                    <td>Pikachu</td>
                   </tr>
                   <tr>
                     <td>4</td>
-                    <td><a href="#character-info" data-toggle="collapse">50 Scent</a></td>
+                    <td>50 Scent</td>
                   </tr>
                 </tbody>
               </table>
             </div><!-- /example -->
           </div>
           <div id="character-info" class="col-md-6 panel-collapse collapse">
+            <h1></h1> <!-- Character name will go here. -->
             <p> here is where the character will show up.</p>
             <img src="http://placehold.it/256x384"/>
           </div>
