--- a/rpg/index.html
+++ b/rpg/index.html
@@ -10,81 +10,98 @@
     <link rel="stylesheet" href="rpg.css">
   </head>
   <body>
-    <div class = "wrapper">
+    <!-- Character containers -->
+    <div class="container">
+      <div class="row">
 
-      <!-- Character containers -->
-      <div class="container">
-        <div class="row">
-          <div id="character-list" class="col-md-4">
-            <div id="character-list-container">
-              <h2>Characters</h2>
-              <table id="character-list-table" class="table table-hover">
-                <tbody>
-                  <tr>
-                    <td>Conan</td>
-                  <tr>
-                </tbody>
-              </table>
-            </div>
-          </div>
-          <div id="character-info" class="col-md-4 panel-collapse collapse">
-            <div id="character-title">
-              <div id="character-image">
-                <img class="img-circle" src="http://placehold.it/70x70"/>
-              </div>
-              <div id="character-name">
-                <h3></h3> <!-- Character name will go here. -->
-              </div>
-            </div>
-            <div id="character-attributes">
-              <table class="table table-hover" id="character-info-table">
-                <tbody>
-                  <tr>
-                    <td><strong>Type</strong></td>
-                    <td>Ranger</td>
-                  </tr>
-                  <tr>
-                    <td><strong>Weapon</strong></td>
-                    <td>Sword</td>
-                  </tr>
-                  <tr>
-                    <td><strong>Strongest Attribute</strong></td>
-                    <td>Strength</td>
-                  </tr>
-                  <tr>
-                    <td><strong>Weakest Attribute</strong></td>
-                    <td>Dexterity</td>
-                  </tr>                  
-                </tbody>
-              </table>
-              <button id="view-items" type="button" class="btn btn-default btn-lg btn-block">View items</button>
-            </div>
-          </div>
-          <div id="character-detailed-info">
-            <div id="detailed-info" class="col-md-4 panel-collapse collapse">
-              <h3></h3>
-              <p>Here is where a detailed description of whatever they user has clicked wil be shown.</p>
-            </div>
-            <div id="item-list" class="col-md-4 panel-collapse collapse">
-              <h3>Items</h3>
-              <table class="table table-hover" id="character-items-table">
-                <thead>
-                  <tr>
-                    <th>Item name</th>
-                    <th>Type</th>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Sword</td>
-                    <td>Weapon</td>
-                  </tr>                 
-                </tbody>
-              </table>
-              <button id="spawn-item" type="button" class="btn btn-default btn-lg btn-block">Spawn random item</button>
-            </div>
+        <div id="character-list" class="col-md-4">
+          <div id="character-list-container">
+            <h2>Characters</h2>
+            <table id="character-list-table" class="table table-hover">
+              <tbody>
+                <tr>
+                  <td>Conan</td>
+                <tr>
+                <tr>
+                  <td>Pikachu</td>
+                <tr>
+              </tbody>
+            </table>
+            <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-block btn-success">
+              <span id="create-glyph" class="glyphicon glyphicon-plus white"></span>
+            </a>
           </div>
         </div>
-      </div>
+
+        <div id="character-info" class="col-md-4 panel-collapse collapse">
+          <div id="character-title">
+            <div id="character-image">
+              <img class="img-circle" src="http://placehold.it/70x70"/>
+            </div>
+            <div id="character-name">
+              <h3></h3> <!-- Character name will go here. -->
+            </div>
+          </div>
+          <div id="character-attributes">
+            <table class="table table-hover" id="character-info-table">
+              <tbody>
+                <tr>
+                  <td><strong>Type</strong></td>
+                  <td>Ranger</td>
+                </tr>
+                <tr>
+                  <td><strong>Weapon</strong></td>
+                  <td>Sword</td>
+                </tr>
+                <tr>
+                  <td><strong>Strongest Attribute</strong></td>
+                  <td>Strength</td>
+                </tr>
+                <tr>
+                  <td><strong>Weakest Attribute</strong></td>
+                  <td>Dexterity</td>
+                </tr>                  
+              </tbody>
+            </table>
+            <button id="view-items" type="button" class="btn btn-default btn-lg btn-block">View items</button>
+            <a id="edit-button" data-toggle="modal" href="#editModal" class="btn btn-block btn-info" disabled="disabled">
+              <span id="edit-glyph" class="glyphicon glyphicon-edit black"></span>
+            </a>
+            <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-block btn-danger" disabled="disabled">
+              <span id="delete-glyph" class="glyphicon glyphicon-trash black"></span>
+            </a>
+          </div>
+        </div>
+
+        <div id="character-detailed-info">
+          <div id="detailed-info" class="col-md-4 panel-collapse collapse">
+            <h3></h3>
+            <p>Here is where a detailed description of whatever they user has clicked wil be shown.</p>
+          </div>
+          <div id="item-list" class="col-md-4 panel-collapse collapse">
+            <h3>Items</h3>
+            <table class="table table-hover" id="character-items-table">
+              <thead>
+                <tr>
+                  <th>Item name</th>
+                  <th>Type</th>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Sword</td>
+                  <td>Weapon</td>
+                </tr>                 
+              </tbody>
+            </table>
+            <button id="spawn-item" type="button" class="btn btn-default btn-lg btn-block">Spawn random item</button>
+          </div>
+          <div id="character-enlarged-image" class="col-md-4 panel-collapse collapse">
+            <h3></h3>
+            <center>
+              <img class="img-circle" src="http://placehold.it/300x300"/>
+            </center>
+          </div>
+        </div>
 
       <!-- Deletion Modal -->
       <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
@@ -280,24 +297,8 @@
           </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
-    </div><!-- /.wrapper -->
+    </div><!-- /.container -->
   
-  <footer>
-      <div id="container">
-        <center>
-          <a id="create-button" data-toggle="modal" href="#createModal" class="btn btn-lg btn-success footerModal">
-            <span id="create-glyph" class="glyphicon glyphicon-plus white"></span>
-          </a>
-          <a id="edit-button" data-toggle="modal" href="#editModal" class="btn btn-lg btn-info footerModal" disabled="disabled">
-            <span id="edit-glyph" class="glyphicon glyphicon-edit black"></span>
-          </a>
-          <a id="delete-button" data-toggle="modal" href="#deleteModal" class="btn btn-lg btn-danger footerModal" disabled="disabled">
-            <span id="delete-glyph" class="glyphicon glyphicon-trash black"></span>
-          </a>
-        </center>
-      </div>
-  </footer>
-
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="//code.jquery.com/jquery.js"></script>
 
