--- a/rpg/index.html
+++ b/rpg/index.html
@@ -21,9 +21,13 @@
         <div id="character-list" class="col-md-4">
           <div id="character-list-container">
             <div>
+              <div style="float: left;">
               <h2>Characters</h2> 
-              <div>
-                <span align="right" id="question-glyph" class="glyphicon glyphicon-question-sign black"></span>
+            </div>
+              <div style="float: right;">
+                <a id="help-button" data-toggle="modal" href="#helpModal" class="btn">
+                  <button class="btn btn-lg btn-info">?</button>
+                </a>
               </div>
             </div>
             <table id="character-list-table" class="table table-hover table-condensed">
@@ -92,7 +96,7 @@
                   <th>Type</th>
               </thead>
               <tbody>
-                <tr id="test" data-container="body" data-toggle="popover" data-placement="right" data-content="Delete">
+                <tr id="item-row" data-container="body" data-toggle="popover" data-placement="right" data-content="Delete">
                   <td>Sword</td>
                   <td>Weapon</td>
                 </tr>                 
@@ -124,16 +128,16 @@
                 <div>
                   <div id="chosen-class" class="btn-group btn-group-justified" data-toggle="buttons">
                     <label class="btn btn-default">
-                      <input type="radio" name="options" id="option1"> Archer
+                      <input type="radio" name="options" id="create-archer"> Archer
                     </label>
                     <label class="btn btn-default">
-                      <input type="radio" name="options" id="option2"> Knight
+                      <input type="radio" name="options" id="create-knight"> Knight
                     </label>
                     <label class="btn btn-default">
-                      <input type="radio" name="options" id="option3"> Thief
+                      <input type="radio" name="options" id="create-thief"> Thief
                     </label>
                     <label class="btn btn-default">
-                      <input type="radio" name="options" id="option3"> Ranger
+                      <input type="radio" name="options" id="create-ranger"> Ranger
                     </label>
                   </div>
                 </div>
@@ -143,10 +147,10 @@
                 <div>
                   <div id="chosen-gender" class="btn-group btn-group-justified" data-toggle="buttons">
                     <label class="btn btn-default">
-                      <input type="radio" name="options" id="option1"> Male
+                      <input type="radio" name="options" id="create-male"> Male
                     </label>
                     <label class="btn btn-default">
-                      <input type="radio" name="options" id="option2"> Female
+                      <input type="radio" name="options" id="create-female"> Female
                     </label>
                   </div>
                 </div>
@@ -158,7 +162,7 @@
                         <span class="input-group-btn">
                             <button id="roll-level" class="btn btn-default">Roll</button>
                         </span>
-                        <input type="text" class="form-control" disabled='disabled' placeholder="Click Roll">
+                        <input id="create-level" type="text" class="form-control" disabled='disabled' placeholder="Click Roll">
                     </div>
                 </div>
 
@@ -169,7 +173,7 @@
                         <span class="input-group-btn">
                             <button id="roll-money" class="btn btn-default">Roll</button>
                         </span>
-                        <input type="text" class="form-control" disabled='disabled' placeholder="Click Roll">
+                        <input id="create-money" type="text" class="form-control" disabled='disabled' placeholder="Click Roll">
                     </div>
                 </div>
 
@@ -249,7 +253,22 @@
         </div><!-- /.modal-dialog -->
       </div><!-- /.modal -->
 
-
+      <!-- Help Modal -->
+      <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="static">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Help</h4>
+            </div>
+            <div class="modal-body">
+              <p>Fuck you.</p>
+            </div>
+            <div class="modal-footer">
+              <button id="confirm-help-button" type="button" class="btn btn-danger">OK</button>
+            </div>
+          </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+      </div><!-- /.modal -->
 
     </div><!-- /.container -->
   
